white space issue update

--- a/index1.css
+++ b/index1.css
@@ -114,7 +114,7 @@ main .section{
     margin-left: 10px;
     background-color: white;
 }
-.brandtitle, .infratitle, .varietytitle, .producttitle{
+.brandtitle, .infratitle, .varietytitle, .producttitle, .contacttitle{
     width: 100vw;
     min-height: 50px;
     margin-top: 10px;
@@ -222,6 +222,7 @@ main .section{
     justify-content: center;
     align-items: center;
     color: white;
+    margin-top: 10px;
 }
 .addresssection{
     width: 50%;
@@ -330,7 +331,7 @@ main .section{
         justify-content: center;
         align-items: center;
         color: white;
-        /* margin-top: 100px; */
+        /* margin-top: 50px; */
     }
     .contactinfo{
         width: 100%;
@@ -403,7 +404,7 @@ main .section{
 
 .varietiescontainer{
     width: 100%;
-    height: 350px;
+    height: 450px;
     /* position: relative; */
     font-family: 'Merienda One', cursive;
 }
